Imager release history.  Older releases can be found in Changes.old

Imager 0.84
===========

 - Imager no longer inherits from Exporter (unless you're running an
   old, old perl.

Imager 0.83 - 21 May 2011
===========

Bug fixes:

 - diag() the error message on failure for some TIFF tests that are
   failing on a Solaris smoker.
   http://www.cpantesters.org/cpan/report/6396db1e-8090-11e0-9682-112b785ebe45

Imager 0.82_01 - 17 May 2011
==============

Dev release, in case the compose tests are too sensitive.

Bug fixes:

 - Imager::Font::T1 incorrectly checked for absolute filename under
   Win32.  Thanks to kmx for the report and fix.
   https://rt.cpan.org/Ticket/Display.html?id=67963

 - compose() with the target, source or mask position off the top or
   left of the target image didn't clip the source image correctly.
   https://rt.cpan.org/Ticket/Display.html?id=67220

 - compose() now returns a useful error message on a non-positive
   opacity.

 - compose.im now at 100% test coverage. (As opposed to, umm, much,
   much less.)

Imager 0.82 - 14 Mar 2011
===========

Bug fixes:

 - eliminate calls to i_has_format() from the test suite, since it's
   no longer a useful way to check for file format support.  Eliminate
   i_has_format() from the functions exposed via XS.
   https://rt.cpan.org/Ticket/Display.html?id=65863

 - eliminate calls to note(), which isn't in the (very old) version of
   Test::More we have as a pre-requisite.  note() is modern enough
   that I don't feel a need to require a Test::More upgrade for it.
   https://rt.cpan.org/Ticket/Display.html?id=65864

 - skip the threads tests on Test::More 2.00_*
   https://rt.cpan.org/Ticket/Display.html?id=65812

 - add an (unshipped) test to check Imager's internal POD links
   https://rt.cpan.org/Ticket/Display.html?id=65749

 - improve the library detection summary
   https://rt.cpan.org/Ticket/Display.html?id=9675

 - increase the version of Imager::Font::Type1 so that upgrades don't