@@ -862,6 +862,12 @@ validate_i_ppal(i_img *im, i_palidx const *indexes, int count) {
 #define ICLF_new_internal(r, g, b, a) i_fcolor_new((r), (g), (b), (a))
 #define ICLF_DESTROY(cl) i_fcolor_destroy(cl)
 
+#ifdef IMAGER_LOG
+#define i_log_enabled() 1
+#else
+#define i_log_enabled() 0
+#endif
+
 #if i_int_hlines_testing()
 
 typedef i_int_hlines *Imager__Internal__Hlines;
@@ -1320,20 +1326,24 @@ i_sametype_chans(im, x, y, channels)
                int y
                int channels
 
-void
+int
 i_init_log(name_sv,level)
 	      SV*    name_sv
 	       int     level
 	PREINIT:
 	  const char *name = SvOK(name_sv) ? SvPV_nolen(name_sv) : NULL;
 	CODE:
-	  i_init_log(name, level);
+	  RETVAL = i_init_log(name, level);
+	OUTPUT:
+	  RETVAL
 
 void
 i_log_entry(string,level)
 	      char*    string
 	       int     level
 
+int
+i_log_enabled()
 
 void
 i_img_exorcise(im)
